# cmake-project-cxx

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
source/: CMakeLists.txt  main.cpp  project.cpp  project.hpp  utility.cpp  utility.hpp
test/: CMakeLists.txt  unit_test.cpp
