#########################################################################################
#
#
#	 CMake build script
#	== == == == == == == 
#
#
#########################################################################################
cmake_minimum_required(VERSION 3.13.2 FATAL_ERROR)


##########################################################################################
# ┌──────────────────────────────────────────────────────────────────────────────────────┐
# │  CMake list my source code files                                                     │
# └──────────────────────────────────────────────────────────────────────────────────────┘
##########################################################################################
set(MY_PROJECT_HEADER_FILES
    "project.hpp"
    "utility.hpp"
)

set(MY_PROJECT_SOURCE_FILES
    "project.cpp"
    "utility.cpp"
    "main.cpp"
)



##########################################################################################
# ┌──────────────────────────────────────────────────────────────────────────────────────┐
# │  CMake create my executable program                                                  │
# └──────────────────────────────────────────────────────────────────────────────────────┘
##########################################################################################
add_executable("${PROJECT_NAME}" 
    "${MY_PROJECT_SOURCE_FILES}" 
    "${MY_PROJECT_HEADER_FILES}"
)


##########################################################################################
# ┌──────────────────────────────────────────────────────────────────────────────────────┐
# │  CMake program with external libraries                                               │
# └──────────────────────────────────────────────────────────────────────────────────────┘
##########################################################################################
# target_link_libraries("${PROJECT_NAME}" PUBLIC "other") if any...


##########################################################################################
# ┌──────────────────────────────────────────────────────────────────────────────────────┐
# │  CMake give executable an alias                                                      │
# └──────────────────────────────────────────────────────────────────────────────────────┘
##########################################################################################
add_executable("${PROJECT_NAME}::source" ALIAS "${PROJECT_NAME}") 


##########################################################################################
# ┌──────────────────────────────────────────────────────────────────────────────────────┐
# │  CMake install this executable and export the targets                                │
# └──────────────────────────────────────────────────────────────────────────────────────┘
##########################################################################################
install(TARGETS "${PROJECT_NAME}" EXPORT "${PROJECT_NAME}-targets"
    RUNTIME 
        DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Runtime
)
